spacing and alignment fix

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,14 +1,6 @@
-video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-}
-
 .hero-container {
     background: white;
-    height: 100vh;
+    height: 120vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -31,6 +23,7 @@ video {
     margin-top: 8px;
     color: black;
     font-size: 32px;
+    font-family: ccbiffbamboomoutline, sans-serif;
 }
 
 ul#socials {
@@ -40,7 +33,7 @@ ul#socials {
 .socials-item {
     display: inline-block;
     padding: 20px;
-    width: 100px;
+    width: 90px;
     height: 100px;
 }
 
@@ -58,7 +51,7 @@ ul#socials {
 @media screen and (max-width: 768px) {
     .hero-container > h1 {
        font-size: 50px;
-        margin-top: -100px; 
+        margin-top: -150px; 
     }
     .hero-container > p {
         font-size: 30px;
